data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1736.wast
;; 7. **Test 7**:    - **Description**: Loop structure with `br_if` instruction checking for a condition and possibly jumping to an earlier loop construct, along with operand verification.    - **Constraint**: Verifying backward jump and operand consistency in loops.    - **CFG Relation**: Tests for correct backward branch CFG integration with loops.

(assert_invalid
  (module
    (func $loop-operand-verification
      (loop $L1
        (i32.const 1)
        (br_if 0 (i32.const 0))
        (i32.const 2)
        (loop $L2
          (i32.const 3)
          (br_if 1 (i32.const 1)) ;; back to L1 with incorrect operand types for stack unwinding
        )
      )
    )
  )
  "type mismatch"
)